--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                       <section class="curriculumvitae">
                         <div class="container">
                           <h1>Descarga mi Curriculum Vitae:</h1>
-                          <h3>Puedes descargar mi Curriculum Vitae en formato PDF haciendo click en el siguiente botón.</h3>
+                          <h3>Puedes descargar mi Curriculum Vitae en formato PDF haciendo  <a href="docs/anexo.pdf" style="color:red">click</a>  en el siguiente botón.</h3>
                           <form action="docs/anexo.pdf">
                             <input type="submit" name="" value="Descargar mi CV">
                           </form>
@@ -245,18 +245,31 @@
         <section class="subscribe text-center">
           <div class="container">
             <h1><img src="img/telegramw.png" style="width:40px" id="subscribe"></img></i><span>Envíame un mensaje: </span></h1>
-            <form action="#">
-              <input type="text" name="" value="" placeholder="" required>
-              <input type="submit" name="" value="Enviar">
-            </form>
+            <form action="#enviar-mensaje" method="post">
+              <input type="text" name="Nombre" value="" placeholder="Nombre" required>
+              <input type="text" name="Apellido" value="" placeholder="Apellidos" required>
+
+            <div class="mensaje">
+                <input type="email" name="email" value="" placeholder="Dirección de correo" required>
+            </div>
+            <div class="">
+                  <input type="text" name="Asunto" value="" placeholder="Asunto" required>
+            </div>
+            <div class="mensaje">
+                    <textarea name="Mensaje" placeholder="Mensaje" rows="6" cols="60" required></textarea>
+            </div>
+            <div class="container">
+                <input type="submit" name="" value="Enviar mensaje">
+            </div>
           </div>
+          </form>
         </section>
         <section class="dark-bg text-center section-padding contact-wrap" id="contact">
           <a href="#top" class="up-btn"><img src="img/upw.png" style="width:20px"></img></a>
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Contactos</h1>
+                <h1 class="arrow">Información de contacto</h1>
               </div>
             </div>
             <div class="row contact-details">
@@ -274,7 +287,7 @@
               </div>
               <div class="col-md-4">
                 <div class="light-box box-hover">
-                  <h2><img src="img/telegram.png" style="width:20px"></img></i><span>Email</span></h2>
+                  <h2><img src="img/telegram.png" style="width:20px"></img></i><span>Email institucional</span></h2>
                   <p><a href="mailto:nanotrejo@usal.es">nanotrejo@usal.es</a></p>
                 </div>
               </div>
